@@ -1,6 +1,8 @@
 Changes
 examples/ex1.pl
 inc/Module/Install.pm
+inc/Module/Install/AuthorRequires.pm
+inc/Module/Install/AuthorTests.pm
 inc/Module/Install/Base.pm
 inc/Module/Install/Can.pm
 inc/Module/Install/Fetch.pm
@@ -16,9 +18,9 @@ META.yml
 Pattern.pm
 README
 SIGNATURE
-t/Video-Pattern/00-use.t
-t/Video-Pattern/01-version.t
-t/Video-Pattern/02-pod_coverage.t
-t/Video-Pattern/03-pod.t
-t/Video-Pattern/04-new.t
-t/Video-Pattern/05-create.t
+t/Video-Pattern/01-use.t
+t/Video-Pattern/02-version.t
+t/Video-Pattern/03-new.t
+t/Video-Pattern/04-create.t
+xt/Video-Pattern/01-pod_coverage.t
+xt/Video-Pattern/02-pod.t
