@@ -8,9 +8,12 @@ use inc::Module::Install;
 # Definition.
 abstract 'Perl class for video frames pattern generating.';
 author 'Michal Spacek <skim@cpan.org>';
+author_requires 'Test::Pod' => 0;
+author_requires 'Test::Pod::Coverage' => 0;
 license 'bsd';
 name 'Video-Pattern';
 readme_from 'Pattern.pm';
+recursive_author_tests('xt');
 requires 'Class::Utils' => 0.03;
 requires 'Error::Pure' => 0.22;
 requires 'File::Basename' => 0;
@@ -29,8 +32,6 @@ test_requires 'File::Temp' => 0;
 test_requires 'Image::Random' => 0;
 test_requires 'Test::More' => 0;
 test_requires 'Test::NoWarnings' => 0;
-test_requires 'Test::Pod' => 0;
-test_requires 'Test::Pod::Coverage' => 0;
 tests_recursive;
 version '0.07';
 
